yaml/ingress.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hotel
  namespace: default
  #annotations:
  #  traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
  - secretName: my-tls-secret
  rules:
  - host: uat-hotels.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample
          servicePort: 80
